--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,31 @@ a {
 ul {
   list-style-type: none;
 }
+
+
+/* //solution */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  gap: 16px;
+}
+
+ul {
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+}
+
+.col {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+/* .col div {
+  flex-shrink: 0;
+} */
